...
                    <items>
                        <table alignment="left" id="d8c-IQ-m0R">
                            <items>
                                <tableRow identifier="TokenRow" id="mNd-dl-4am">
                                    <group key="rootItem" width="1" height="0.0" alignment="left" layout="vertical" id="iV6-0J-p4H">
                                        <items>
                                            <label width="1" height="15" alignment="left" accessibilityIdentifier="label" text="Matrix Studios" textAlignment="center" id="jSq-n3-3Zz">
                                                <fontDescription key="font" name="SourceCodeRoman-Medium" family="Source Code Variable" pointSize="10"/>
                                            </label>
                                            <group width="1" alignment="left" id="DgI-8Q-s2E">
                                                <items>
                                                    <label width="110" height="20" alignment="left" accessibilityIdentifier="code" text="000 000" textAlignment="right" id="ujH-vQ-mzG">
                                                        <fontDescription key="font" name="SourceCodeRoman-Semibold" family="Source Code Variable" pointSize="20"/>
...
